# MyCalc

./: CMakeLists.txt  buildCalc.sh  docker_build.jenkins  first_jenkins  first_jenkins.jenkins  smth.txt
docker/: Dockerfile  Dockerfile_debian  Dockerfile_ubuntu
jenkinsfiles/: another_docker_build.jenkins  docker_build.jenkins  first_jenkins.jenkins  multiple_docker_build.jenkins
src/: calculator.cpp  main.cpp
tests/: CMakeLists.txt  calculator_tests.cpp
